cluster/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.bijouxlabs.cc`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: allow-ha-lan
          namespace: bijouxlabs
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: cloudflare
